tests/snapshots/integration_tests__snapshot_tests__array_partial_init.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_partial_init.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int c+0 j+0 i+0) j+0) i+0)",
        "(= (Read_Int_Int (Write_Int_Int c+0 j+0 i+0) Z) (Read_Int_Int c+0 Z))",
    ],
}
