tests/snapshots/integration_tests__snapshot_tests__array_single_elem_increm.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_single_elem_increm.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 0 (+ 1 (Read_Int_Int a+0 0))) 0) (+ 1 (Read_Int_Int a+0 0)))",
    ],
}
